--- a/app/src/main/res/layout/fassade_3.xml
+++ b/app/src/main/res/layout/fassade_3.xml
@@ -13,9 +13,19 @@
         android:layout_height="match_parent"
         android:background="@drawable/rathaus"
         tools:context=".MainActivity">
+        <!-- Green Click Aninmation for the reproduction of the clicks from the recorder -->
+        <de.gruppe.e.klingklang.view.GreenClickAnimationView
+            android:id="@+id/green_animation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <!--Vertical  guidelines  -->
-
         <ImageButton
             android:id="@+id/record_button"
             android:layout_width="wrap_content"
@@ -34,65 +44,49 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.41" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.63" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.32" />
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.66" />
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.88" />
-
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_Y"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.95" />
-
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_X"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9" />
-
-
         <!-- horizontal guidelines  -->
-
-
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/f3_guideline_Y1"
             android:layout_width="wrap_content"
@@ -107,6 +101,15 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.66" />
 
+        <de.gruppe.e.klingklang.view.RedClickAnimationView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <!-- Buttons-->
         <!-- Button 1 -->
@@ -134,6 +137,17 @@
             app:layout_constraintTop_toBottomOf="@+id/f3_button1_sound"
             app:layout_constraintHorizontal_bias="0.0"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+        <de.gruppe.e.klingklang.view.GreenClickAnimationView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/click_animation_background"
+            android:gravity="center"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X6"
+            app:layout_constraintStart_toStartOf="@id/guideline_X5"
+            app:layout_constraintTop_toTopOf="@id/f3_guideline_Y1" />
 
         <!-- Button 2 -->
         <View
@@ -160,7 +174,17 @@
             app:layout_constraintTop_toBottomOf="@+id/f3_button2_sound"
             app:layout_constraintHorizontal_bias="0.0"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
+        <de.gruppe.e.klingklang.view.GreenClickAnimationView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/click_animation_background"
+            android:gravity="center"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X8"
+            app:layout_constraintStart_toStartOf="@id/guideline_X7"
+            app:layout_constraintTop_toTopOf="@id/f3_guideline_Y2" />
         <!-- Button 3 -->
         <View
             android:id="@+id/f3_button3_sound"
@@ -186,7 +210,17 @@
             app:layout_constraintTop_toBottomOf="@+id/f3_button3_sound"
             app:layout_constraintHorizontal_bias="0.0"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
-
+        <de.gruppe.e.klingklang.view.GreenClickAnimationView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/click_animation_background"
+            android:gravity="center"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@id/guideline_X10"
+            app:layout_constraintStart_toStartOf="@id/guideline_X9"
+            app:layout_constraintTop_toTopOf="@id/f3_guideline_Y2" />
 
 
         <ImageButton
