--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/gebaeudee"
         tools:context=".viewmodel.MainActivity">
 
-
+        <!-- Green Click Aninmation for the reproduction of the clicks from the recorder -->
         <de.gruppe.e.klingklang.view.GreenClickAnimationView
             android:id="@+id/green_animation"
             android:layout_width="match_parent"
@@ -202,6 +202,8 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.71" />
 
+
+        <!-- Red Click Animation when no button is hit -->
         <de.gruppe.e.klingklang.view.RedClickAnimationView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -511,7 +513,7 @@
             app:layout_constraintEnd_toEndOf="@id/guideline_X12"
             app:layout_constraintStart_toStartOf="@id/guideline_X11"  android:layout_height="0dp" android:layout_width="0dp"/>
 
-        <!-- Weitere Buttons -->
+        <!-- other Buttons -->
         <ImageButton
             android:id="@+id/setting_button"
             android:layout_width="0dp"
@@ -523,7 +525,6 @@
             app:layout_constraintTop_toTopOf="@id/guideline_YB4"
             app:srcCompat="@drawable/einstellungen"
             android:contentDescription="@string/pull_up_settings_drawer" />
-
         <ImageButton
             android:id="@+id/edit_button"
             android:layout_width="wrap_content"
@@ -535,7 +536,6 @@
             app:layout_constraintTop_toTopOf="@id/guideline_YB2"
             app:srcCompat="@drawable/edit_mode"
             android:contentDescription="@string/toggle_between_play_and_edit_mode" />
-
         <ImageButton
             android:id="@+id/record_button"
             android:layout_width="wrap_content"
@@ -547,7 +547,6 @@
             app:layout_constraintStart_toStartOf="@id/guideline_XB_1"
             app:layout_constraintTop_toTopOf="@id/guideline_YB4"
             app:srcCompat="@drawable/start_recording" />
-
         <ImageButton
             android:id="@+id/change_fassade"
             android:layout_width="wrap_content"
