--- a/app/src/main/res/drawable/f1_fensterbutton_background_bottom_unclicked.xml
+++ b/app/src/main/res/drawable/f1_fensterbutton_background_bottom_unclicked.xml
@@ -1,25 +1,19 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- This is the line -->
 
-
-
-
+    <!-- Background solid color: main color -->
     <item
         android:bottom="@dimen/clicked_padding"
-        android:left="@dimen/clicked_padding"
+        android:left="0dp"
         android:right="@dimen/clicked_padding"
         android:top="@dimen/clicked_padding">
         <shape>
             <solid android:color="@color/fenster_color_green"></solid>
-            <corners android:radius="6dip" />
+            <corners android:radius="@dimen/rectangle_solid_corners" />
 
         </shape>
     </item>
 
-
-
-
-    <!-- This is the main color -->
+    <!-- White Stroke -->
     <item
         android:top="-5dp" android:right="0dp" android:left="0dp" android:bottom="0dp">
         <shape
